--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 #######################################################################################
 # Book settings
-title: Advanced Data Science # The title of the book. Will be placed in the left navbar.
+title: Data Science # The title of the book. Will be placed in the left navbar.
 author: Corina Navarrete # The author of the book
 copyright: "2024" # Copyright year to be placed in the footer
 logo: logo.png # A path to the book logo
